fixing view on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html{
   -moz-background-size: cover;
   -o-background-size: cover;
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 body {
